--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ TensorKit = "07d1fe3e-3e46-537d-9eac-e9e13d0d4cec"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 
 [extensions]
-CuJisaq = "CUDA"
+JisaqCUDAExt = "CUDA"
 
 [compat]
 BenchmarkTools = "1"
